deploy.k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studybuddy-deployment
  labels:
    app.kubernetes.io/name: studybuddy
    app.kubernetes.io/version: "0.1.0"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: studybuddy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: studybuddy
        app.kubernetes.io/version: "0.1.0"
    spec:
      containers:
        - name: studybuddy
          image: docker.io/library/studybuddy:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8501
              name: streamlit-app
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: studybuddy-service
  labels:
    app.kubernetes.io/name: studybuddy
spec:
  type: NodePort # Explicitly set - use LoadBalancer or NodePort for external access
  selector:
    app.kubernetes.io/name: studybuddy
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
      nodePort: 32003
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studybuddy-ingress
  labels:
    app.kubernetes.io/name: studybuddy
spec:
  ingressClassName: nginx
  rules:
    - host: studybuddy.ludologico.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: studybuddy-service
                port:
                  number: 8501
